# risk-assessor

./: .drone.yml  .gitignore  Dockerfile.frontend  README.md  docker-compose.yml
backend/: .gitignore  README.md  main.py  pyproject.toml
environments/: backend-prod.yaml  backend-staging.yaml  frontend-prod.yaml  frontend-staging.yaml
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.js  page.js
frontend/app/api/address/: route.js
frontend/app/api/coordinates/: route.js
frontend/app/api/fireworks/: route.js
frontend/app/api/rev_geocode/: route.js
frontend/app/components/: Avatar.js  Header.js  Legend.js  Map.js  businessPlan.js
frontend/app/components/InfoWizard/: InfoWizard.jsx
frontend/app/context/: Markers.js
frontend/app/styles/: header.module.css  map.module.css  parent.module.css
frontend/clients/: fireworks-api-client.js  geocoding-api-client.js
frontend/components/: Avatar.js  Header.js  Map.js  SpeechToText.js  businessPlan.js
frontend/components/InfoWizard/: InfoWizard.jsx  InfoWizard.module.css
frontend/context/: Markers.js
frontend/pages/: index.js
frontend/styles/: Home.module.css  header.module.css
