[tool.poetry]
name = "your-virtual-env"
version = "0.1.0"
description = "This repository houses a complete Business Loan Risk Assessment demo."
authors = ["Paul Claret <paul.claret@mongodb.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pymongo = "^4.10.1"
python-dotenv = "^1.0.1"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic = "2.6.3"
requests = "2.31.0"
geopy = "2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
